--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </form>
 
             <div id="message" style="display: none;">
-                <h3>로그인에 성공하셨습니다. <span id="usernameText"></span>!</h3>
+                <h3>로그인에 성공하셨습니다. <span id="usernameText"></span>님!</h3>
                 <p>      </p>
             </div>
 
