--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <p class='highlight'>이 페이지는 <파이썬 왕초보의 크롤링 도전: 웹 데이터 수집부터 저장까지>를 위해 만들어진 페이지입니다.</p>
         <p>Python 왕초보의 크롤링을 돕기위해 무료 전자책을 집필하였습니다.</p>
         <p>크롤링과 Python을 처음 접하는 모든 분들에게 도움이 되기를 바랍니다.</p>
-        <a href="javascript:doDisplay();"> >Click Here!</a><br/><br/> 
+        <a href="javascript:doDisplay();"> >> Click Here!</a><br/><br/> 
         <div id="myDIV" style="display:none; background-color: #eee;"> 	
 	        <h3>Selenium .click() 예제입니다.</h3> 	
 	        <p>display block 속성값은 내부 요소를 나타나게 하며 none 는 사라지게 합니다.</p> 
@@ -155,8 +155,8 @@
     <div id="BookRecommand" class="hidden">
         <h2>Book Recommand</h2>
         <p>Python과 SQL, 그리고 데이터 분석에 관련된 책 목록입니다.</p>
+        <p>책 소개 부분에 마우스를 오버하시면 추가 설명을 확인하실 수 있습니다.</p>
         <p>제목을 클릭하시면 해당 책의 리디북스 페이지로 이동합니다.</p>
-        <p>   </p>
 <style>
     table {
         border-collapse: collapse;
@@ -185,6 +185,10 @@
         color: #444;
         text-decoration: none;
         font-weight: bold;
+    }
+
+    td.introduction, td.price, td.author {
+        font-size: 10px;
     }
 </style>
 <table>
@@ -510,7 +514,7 @@
     <div id="contact" class="hidden">
         <h2>Contact</h2>
         <p>아래 페이지는 저희 팀의 GitHub입니다. 필요한 자료를 업로드해두었으니, 자유롭게 사용하시길 바랍니다.</p>
-        <p><a href="https://github.com/spanish96/Crawling_DAS" onclick="showContent('Crawling DAS GitHub로 이동')">Crawling organization GitHub</a></p>
+        <p><a href="https://github.com/spanish96/Crawling_DAS" onclick="showContent('Crawling DAS GitHub로 이동')"> >> Crawling organization GitHub</a></p>
     </div>
     
     <div id="loginContent" class="hidden">
