--- a/index.html
+++ b/index.html
@@ -192,13 +192,15 @@
     }
 </style>
 <table>
+    <thead>
     <tr>
         <th>Title</th>
         <th>Author/Publisher</th>
         <th>Introduction</th>
         <th>Price</th>
     </tr>
-
+    </thead>
+    <tbody>
     <tr>
         <td category="python"><a href="https://ridibooks.com/books/443001043?_rdt_sid=category_books&_rdt_idx=0&_rdt_arg=2200">개정판｜혼자 공부하는 파이썬</a></td>
         <td>윤인성/한빛미디어</td>
@@ -506,6 +508,7 @@
         <td title="<파이썬을 이용한 빅데이터 수집, 분석과 시각화> 도서 구독자들을 위한 파이썬 기초 문법을 다루고있다. 이 도서 외에도 파이썬 기본 문법을 익히려는 분들에게 유용한 입문서 역할을 할 수 있도록 만들었다.…"><파이썬을 이용한 빅데이터 수집, 분석과 시각화> 도서 구독자들을 위한 파이썬 기초 문법을</td>
         <td>무료</td>
     </tr>
+    </tbody>
     
 </table>
 
